<resources>
    <string name="app_name">Five Things</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="loading">Loading</string>
    <string name="blurb">Write easily about your day, see trends and patterns in your life, reflect on the past, and order printed diaries.</string>
    <string name="search">Search</string>
    <string name="analytics">Analytics</string>
    <string name="five_things">Five Things</string>
    <string name="settings">Settings</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_out">Log out</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="create_account">Create Account</string>
    <string name="already_exists">Email ID exists</string>
    <string name="print_your_five_things">Print your Five Things</string>
    <string name="feature_coming_soon">Feature coming soon!</string>
    <string name="channel_name">FiveThingsChannel</string>
    <string name="channel_description">Five Things Channel</string>
    <string name="intro_header_write">Write Five Things a day</string>
    <string name="intro_content_write">Keep track of your days in five manageable pieces.\nIt’s as easy as 1, 2, 3...4, 5</string>
    <string name="intro_header_help">Here to help</string>
    <string name="intro_content_help">Once a day is all it takes, and we’ll make sure you stay on track with useful and timely reminders</string>
    <string name="intro_header_search">Search your Five Things</string>
    <string name="intro_content_search">Find that time you slam dunked on Kevin</string>
    <string name="auth_problems_header">Do we know you?</string>
    <string name="auth_problems_content">Hmmm looks like you need to sign in again to view this content. Sorry about that!</string>
    <string name="no_network_content">Check your connection and try again</string>
    <string name="no_network_header">Uh oh, you lost connection</string>
    <string name="beta_tester">Hey lovely beta tester! Go ahead and log in and go crazy. If the app does something weird please take note, screenshot, etc of exactly what you did/happened. Please try to roam around the app and try to use it as you think its intended (everyone writes their five things differently!). \n\nIf you find something weird, have a suggestion, or want to tell me how great I am please message me!! \n\n This is not our production database so me and Nagkumar CAN see your data so dont write anything incriminating or embarrassing (With the real app we won't be able to see production data.). \n \n Thanks again for trying out this app, you are a great human. \n ❤️ Alison</string>

</resources>
