<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="alison.fivethingskotlin.fivethings.FiveThingsViewModel" />

    </data>

    <FrameLayout
        android:id="@+id/five_things_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="alison.fivethingskotlin.fivethings.FiveThingsFragment">

        <ProgressBar
            android:id="@+id/save_spinner"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|right"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="@{viewModel.isSaving ?  View.VISIBLE : View.GONE}" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading() ?  View.GONE : View.VISIBLE}">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/current_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@{viewModel.dateString}"
                    android:textAlignment="center"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Wednesday September 24th, 2018" />


                <TextView
                    android:id="@+id/one_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/one"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_date" />

                <EditText
                    android:id="@+id/one"
                    style="@style/ThingField"
                    fontPath="fonts/Larsseit.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_box_disabled"
                    android:text="@={viewModel.one}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/one_label" />

                <TextView
                    android:id="@+id/two_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/two"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/one" />

                <EditText
                    android:id="@+id/two"
                    style="@style/ThingField"
                    fontPath="fonts/Larsseit.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_box_disabled"
                    android:text="@={viewModel.two}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/two_label" />

                <TextView
                    android:id="@+id/three_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/three"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/two" />

                <EditText
                    android:id="@+id/three"
                    style="@style/ThingField"
                    fontPath="fonts/Larsseit.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_box_disabled"
                    android:text="@={viewModel.three}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/three_label" />

                <TextView
                    android:id="@+id/four_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/four"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/three" />

                <EditText
                    android:id="@+id/four"
                    style="@style/ThingField"
                    fontPath="fonts/Larsseit.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_box_disabled"
                    android:text="@={viewModel.four}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/four_label" />

                <TextView
                    android:id="@+id/five_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/five"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/four" />

                <EditText
                    android:id="@+id/five"
                    style="@style/ThingField"
                    fontPath="fonts/Larsseit.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_text_box_disabled"
                    android:text="@={viewModel.five}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/five_label" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <ImageView
            android:id="@+id/saved_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|right"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:tint="@color/bluegreen"
            android:visibility="@{viewModel.saved ?  View.VISIBLE : View.GONE}"
            app:srcCompat="@drawable/ic_checkmark" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading() ?  View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <TextView
                android:id="@+id/loading_text"
                style="@style/Text.Loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loading_margin_top"
                android:text="@string/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading_text" />
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>
</layout>
